# mcpr-editor

./: .gitignore  Cargo.toml  README.md  metaData.json  test.py
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  deploy.yml  release.yml
mcpr-app/: Cargo.toml
mcpr-app/src/: export.rs  files.rs  filter.rs  lib.rs  merge.rs  row.rs  selection.rs
mcpr-cli/: Cargo.toml
mcpr-cli/src/: backup.rs  main.rs
mcpr-gpui/: Cargo.toml  README.md
mcpr-gpui/src/: events_table.rs  main.rs  settings.rs  store.rs  workspace.rs
mcpr-lib/: Cargo.toml
mcpr-lib/src/: archive.rs  event.rs  flashback.rs  lib.rs  mcpr.rs  protocol.rs
mcpr-lib/src/archive/: directory.rs  zip.rs
mcpr-lib/tests/: event_roundtrip.rs  flashback_roundtrip.rs
mcpr-ui/: Cargo.toml  README.md  Trunk.toml  index.html  input.css  style.css
mcpr-ui/src/: app.rs  export.rs  main.rs  merge.rs
