[package]
name = "mcpr-app"
version = "0.1.0"
edition = "2024"

# UI フレームワーク非依存のアプリロジック。mcpr-ui (Yew) と mcpr-gpui (gpui) が
# 共有する。yew / gpui / web-sys のいずれにも依存しない。
[dependencies]
mcpr-lib = { path = "../mcpr-lib", default-features = false }
anyhow = "1.0"
uuid = "1.19.0"
# new_replay_uuid の乱数。native は既定 backend、wasm は下の target 別依存で
# wasm_js backend を有効化する (.cargo/config.toml の rustflags と対で使う)。
getrandom = "0.3"

# wasm ビルド (mcpr-ui 経由) 専用。native (mcpr-cli/mcpr-gpui) には混入しない。
[target.'cfg(target_arch = "wasm32")'.dependencies]
# export_merged の yield_to_browser 用 (native では即時完了し不要)。
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
