[package]
name = "mcpr-lib"
version = "0.1.0"
edition = "2024"

[features]
default = ["fs"]
# ローカルファイルシステム (directory archive) を有効化する。
# wasm32 向けビルドでは `default-features = false` で除外できる。
fs = []

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zip = "7.1.0"
