[package]
name = "mcpr-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
mcpr-lib = { path = "../mcpr-lib", default-features = false }
anyhow = "1.0"
gloo-file = "0.3"
# 書き出し中に進捗バーを再描画させる yield (TimeoutFuture) 用。
gloo-timers = { version = "0.3", features = ["futures"] }
# Flashback 書き出しのリプレイ uuid (Builder::from_random_bytes で組み立てる。
# v4/rng feature は getrandom 0.4 を別途引き込むため使わず、乱数は下の
# 構成済み getrandom 0.3 から直接取る)。
uuid = "1.19.0"
# HtmlAnchorElement への unchecked_into (JsCast) 用。
wasm-bindgen = "0.2"
# getrandom 0.3 (zip 経由) と 0.2 (yew 経由) の wasm backend を有効化。
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "File",
    "FileList",
    "HtmlAnchorElement",
    "HtmlDetailsElement",
    "HtmlElement",
    "HtmlInputElement",
    "MediaQueryList",
    "Storage",
    "Window",
] }
