[package]
name = "mcpr-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
mcpr-lib = { path = "../mcpr-lib", default-features = false }
# UI 非依存のアプリロジック (連結・書き出し・フィルタ・状態遷移)。
# uuid / getrandom(0.3) の wasm backend もこちらが引き込む。
mcpr-app = { path = "../mcpr-app" }
anyhow = "1.0"
gloo-file = "0.3"
# 着地ハイライトの遅延解除 (app.rs) 用の TimeoutFuture。
gloo-timers = { version = "0.3", features = ["futures"] }
# HtmlAnchorElement への unchecked_into (JsCast) 用。
wasm-bindgen = "0.2"
# yew 経由で引き込まれる getrandom 0.2 の wasm backend を有効化。
# (getrandom 0.3 の wasm_js backend は mcpr-app が有効化する)
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "File",
    "FileList",
    "HtmlAnchorElement",
    "HtmlDetailsElement",
    "HtmlElement",
    "HtmlInputElement",
    "MediaQueryList",
    "Storage",
    "Window",
] }
